clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20221006_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20221006-1.c" (c, x86_64-unknown-linux-gnu)
fn atoi(%arg0: s8i*) -> s32i [external, c, pure, nothrow];
fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca s32i, "len", align 4
        %4 = alloca s32i, "count", align 4
        %5 = alloca s32i[64], "data", align 16
        %6 = alloca u8i*, "saved_stack", align 8
        store %arg0, %0
        store %arg1, %1
        %7 = const 0 : s32i
        store %7, %2
        %8 = load %0 : s32i, align 4
        %9 = const 2 : s32i
        %10 = cmp eq %8, %9 : bool
        %11 = ternary %10 ? { : s32i
            %137 = const 1 : s64i
            %138 = load %1 : s8i**, align 8
            %139 = ptr_stride %138, %137 : s8i**
            %140 = load %139 : s8i*, align 8
            %141 = call @atoi(%140) : s32i [pure]
            yield %141
        } : {
            %136 = const 4 : s32i
            yield %136
        }
        store %11, %3, align 4
        %12 = load %3 : s32i, align 4
        %13 = cast(integral) %12 : u64i
        %14 = load %3 : s32i, align 4
        %15 = cast(integral) %14 : u64i
        %16 = stacksave : u8i*
        store %16, %6, align 8
        cleanup.scope {
            %19 = mul %13, %15 : u64i [nuw]
            %20 = alloca s32i, "M1", align 16, dynamic %19
            %21 = load %3 : s32i, align 4
            %22 = cast(integral) %21 : u64i
            %23 = load %3 : s32i, align 4
            %24 = cast(integral) %23 : u64i
            %25 = mul %22, %24 : u64i [nuw]
            %26 = alloca s32i, "M2", align 16, dynamic %25
            scope {
                %101 = alloca s32i, "i", align 4
                %102 = const 0 : s32i
                store %102, %101, align 4
                for cond: {
                    %133 = load %101 : s32i, align 4
                    %134 = load %3 : s32i, align 4
                    %135 = cmp lt %133, %134 : bool
                    condition %135
                } step: {
                    %103 = load %101 : s32i, align 4
                    %104 = inc %103 : s32i [nsw]
                    store %104, %101, align 4
                    yield
                } do {
                    scope {
                        %105 = alloca s32i, "j", align 4
                        %106 = const 0 : s32i
                        store %106, %105, align 4
                        for cond: {
                            %130 = load %105 : s32i, align 4
                            %131 = load %3 : s32i, align 4
                            %132 = cmp lt %130, %131 : bool
                            condition %132
                        } step: {
                            %107 = load %105 : s32i, align 4
                            %108 = inc %107 : s32i [nsw]
                            store %108, %105, align 4
                            yield
                        } do {
                            %109 = load %101 : s32i, align 4
                            %110 = load %3 : s32i, align 4
                            %111 = mul %109, %110 : s32i [nsw]
                            %112 = load %105 : s32i, align 4
                            %113 = add %111, %112 : s32i [nsw]
                            %114 = load %105 : s32i, align 4
                            %115 = cast(integral) %114 : s64i
                            %116 = load %101 : s32i, align 4
                            %117 = cast(integral) %116 : s64i
                            %118 = cast(integral) %117 : u64i
                            %119 = mul %118, %24 : u64i [nsw]
                            %120 = ptr_stride %26, %119 : s32i*
                            %121 = ptr_stride %120, %115 : s32i*
                            store %113, %121, align 4
                            %122 = load %105 : s32i, align 4
                            %123 = cast(integral) %122 : s64i
                            %124 = load %101 : s32i, align 4
                            %125 = cast(integral) %124 : s64i
                            %126 = cast(integral) %125 : u64i
                            %127 = mul %126, %15 : u64i [nsw]
                            %128 = ptr_stride %20, %127 : s32i*
                            %129 = ptr_stride %128, %123 : s32i*
                            store %113, %129, align 4
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            %27 = const 1 : s64i
            %28 = const 0 : u64i
            %29 = mul %28, %24 : u64i [nsw]
            %30 = ptr_stride %26, %29 : s32i*
            %31 = ptr_stride %30, %27 : s32i*
            %32 = load %31 : s32i, align 4
            %33 = const 0 : s64i
            %34 = const 1 : u64i
            %35 = mul %34, %24 : u64i [nsw]
            %36 = ptr_stride %26, %35 : s32i*
            %37 = ptr_stride %36, %33 : s32i*
            store %32, %37, align 4
            scope {
                %52 = alloca s32i, "i", align 4
                %53 = const 0 : s32i
                store %53, %52, align 4
                for cond: {
                    %96 = load %52 : s32i, align 4
                    %97 = load %3 : s32i, align 4
                    %98 = const 1 : s32i
                    %99 = sub %97, %98 : s32i [nsw]
                    %100 = cmp lt %96, %99 : bool
                    condition %100
                } step: {
                    %54 = load %52 : s32i, align 4
                    %55 = inc %54 : s32i [nsw]
                    store %55, %52, align 4
                    yield
                } do {
                    scope {
                        %56 = alloca s32i, "j", align 4
                        %57 = const 0 : s32i
                        store %57, %56, align 4
                        for cond: {
                            %93 = load %56 : s32i, align 4
                            %94 = load %3 : s32i, align 4
                            %95 = cmp lt %93, %94 : bool
                            condition %95
                        } step: {
                            %58 = load %56 : s32i, align 4
                            %59 = inc %58 : s32i [nsw]
                            store %59, %56, align 4
                            yield
                        } do {
                            scope {
                                %60 = load %56 : s32i, align 4
                                %61 = cast(integral) %60 : s64i
                                %62 = load %52 : s32i, align 4
                                %63 = const 1 : s32i
                                %64 = add %62, %63 : s32i [nsw]
                                %65 = cast(integral) %64 : s64i
                                %66 = cast(integral) %65 : u64i
                                %67 = mul %66, %15 : u64i [nsw]
                                %68 = ptr_stride %20, %67 : s32i*
                                %69 = ptr_stride %68, %61 : s32i*
                                %70 = load %69 : s32i, align 4
                                %71 = load %56 : s32i, align 4
                                %72 = cast(integral) %71 : s64i
                                %73 = load %52 : s32i, align 4
                                %74 = cast(integral) %73 : s64i
                                %75 = cast(integral) %74 : u64i
                                %76 = mul %75, %15 : u64i [nsw]
                                %77 = ptr_stride %20, %76 : s32i*
                                %78 = ptr_stride %77, %72 : s32i*
                                %79 = load %78 : s32i, align 4
                                %80 = cmp gt %70, %79 : bool
                                if %80 {
                                    %81 = load %52 : s32i, align 4
                                    %82 = load %56 : s32i, align 4
                                    %83 = cast(integral) %82 : s64i
                                    %84 = load %52 : s32i, align 4
                                    %85 = cast(integral) %84 : s64i
                                    %86 = cast(integral) %85 : u64i
                                    %87 = mul %86, %24 : u64i [nsw]
                                    %88 = ptr_stride %26, %87 : s32i*
                                    %89 = ptr_stride %88, %83 : s32i*
                                    %90 = load %89 : s32i, align 4
                                    %91 = cast(integral) %90 : s64i
                                    %92 = get_element %5[%91] : s32i*
                                    store %81, %92, align 4
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            scope {
                %40 = const 1 : s64i
                %41 = const 0 : u64i
                %42 = mul %41, %24 : u64i [nsw]
                %43 = ptr_stride %26, %42 : s32i*
                %44 = ptr_stride %43, %40 : s32i*
                %45 = load %44 : s32i, align 4
                %46 = cast(integral) %45 : s64i
                %47 = get_element %5[%46] : s32i*
                %48 = load %47 : s32i, align 4
                %49 = const 1 : s32i
                %50 = cmp ne %48, %49 : bool
                if %50 {
                    %51 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            %38 = const 0 : s32i
            store %38, %2
            %39 = load %2 : s32i
            return %39
            ^bb1():
                yield
        } cleanup normal {
            %18 = load %6 : u8i*, align 8
            stackrestore %18
            yield
        }
        %17 = load %2 : s32i
        return %17
}
