clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20230510_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20230510-1.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg2: bool*, %arg3: bool) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: bool*, %arg3: bool):
        %43 = alloca bool*, "a", align 8
        %44 = alloca bool, "b", align 1
        %45 = alloca bool, "__retval", align 1
        %46 = alloca bool, "t", align 1
        store %arg2, %43
        store %arg3, %44
        %47 = load %43 : bool*, align 8
        %48 = load %47 : bool, align 1
        store %48, %46, align 1
        scope {
            %51 = load %46 : bool, align 1
            %52 = cast(bool_to_int) %51 : s32i
            %53 = load %44 : bool, align 1
            %54 = cast(bool_to_int) %53 : s32i
            %55 = cmp le %52, %54 : bool
            if %55 {
                %56 = load %44 : bool, align 1
                store %56, %45
                %57 = load %45 : bool
                return %57
            }
            yield
        }
        %49 = load %46 : bool, align 1
        store %49, %45
        %50 = load %45 : bool
        return %50
}
fn f1(%arg0: bool*, %arg1: bool) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: bool*, %arg1: bool):
        %32 = alloca bool*, "a", align 8
        %33 = alloca bool, "b", align 1
        %34 = alloca bool, "__retval", align 1
        store %arg0, %32
        store %arg1, %33
        %35 = load %32 : bool*, align 8
        %36 = load %35 : bool, align 1
        %37 = cast(bool_to_int) %36 : s32i
        %38 = load %33 : bool, align 1
        %39 = cast(bool_to_int) %38 : s32i
        %40 = or %37, %39 : s32i
        %41 = cast(int_to_bool) %40 : bool
        store %41, %34
        %42 = load %34 : bool
        return %42
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = alloca s32i, "j", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 0 : s32i
    store %4, %1, align 4
    %5 = const 0 : s32i
    store %5, %2, align 4
    scope {
        %8 = const 0 : s32i
        store %8, %1, align 4
        for cond: {
            %29 = load %1 : s32i, align 4
            %30 = const 1 : s32i
            %31 = cmp le %29, %30 : bool
            condition %31
        } step: {
            %9 = load %1 : s32i, align 4
            %10 = inc %9 : s32i [nsw]
            store %10, %1, align 4
            yield
        } do {
            scope {
                %11 = const 0 : s32i
                store %11, %2, align 4
                for cond: {
                    %26 = load %2 : s32i, align 4
                    %27 = const 1 : s32i
                    %28 = cmp le %26, %27 : bool
                    condition %28
                } step: {
                    %12 = load %2 : s32i, align 4
                    %13 = inc %12 : s32i [nsw]
                    store %13, %2, align 4
                    yield
                } do {
                    scope {
                        %14 = alloca bool, "a", align 1
                        %15 = load %1 : s32i, align 4
                        %16 = cast(int_to_bool) %15 : bool
                        store %16, %14, align 1
                        scope {
                            %17 = load %2 : s32i, align 4
                            %18 = cast(int_to_bool) %17 : bool
                            %19 = call @f(%14, %18) : bool [all]
                            %20 = cast(bool_to_int) %19 : s32i
                            %21 = load %2 : s32i, align 4
                            %22 = cast(int_to_bool) %21 : bool
                            %23 = call @f1(%14, %22) : bool [all]
                            %24 = cast(bool_to_int) %23 : s32i
                            %25 = cmp ne %20, %24 : bool
                            if %25 {
                                call @abort() [all]
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
