clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20230630_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20230630-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.s0 : rec_S = ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("u16i"), value: "61781" }]) } [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_S, "s0", align 2
        %2 = alloca s8i*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @__const.main.s0 : rec_S*
        copy
        %5 = cast(bitcast) %1 : s8i*
        store %5, %2, align 8
        scope {
                %8 = load %2 : s8i*, align 8
                %9 = load %8 : s8i, align 1
                %10 = cast(integral) %9 : s32i
                %11 = const 85 : s32i
                cmp
                if %12 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = const 0 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
